--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>proj</title>
     <link rel="stylesheet" href="build/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -62,7 +62,117 @@
                </li>
            </ul>
        </nav>
+
    </header>
+
+   <section class="about">
+       <div class="container">
+           <div class="about__description">
+               <h2 class="title title_color_black">
+                   about
+               </h2>
+               <p class="about__text text">
+                   We specialize in contemporary, functional, and stunning
+                   websites with design that really brings that "WOW" factor.
+                   In our design process, we make sure to stay one step ahead
+                   of the latest trends, never forgetting to abide by key web
+                   standards.
+               </p>
+           </div>
+
+           <div class="about__row">
+               <div class="about__column">
+                   <div class="item-about">
+                       <div class="item-about__icon">
+                           <img src="assets/img/about-icon-1.png" alt="icon-1">
+                       </div>
+                           <h3 class="item-about__title">web</h3>
+                           <p class="text item-about__text">
+                               We tend to deliver unique and
+                               functional design, through
+                               innovation and creativity.
+                           </p>
+                   </div>
+
+                   <div class="item-about">
+                       <div class="item-about__icon">
+                           <img src="assets/img/about-icon-2.png" alt="icon-2">
+                       </div>
+                       <h3 class="item-about__title">ios and android</h3>
+                       <p class="text item-about__text">
+                           We tend to deliver unique and
+                           functional design, through
+                           innovation and creativity.
+                       </p>
+                   </div>
+
+                   <div class="item-about">
+                       <div class="item-about__icon">
+                           <img src="assets/img/about-icon-3.png" alt="icon-3">
+                       </div>
+                       <h3 class="item-about__title">marketing</h3>
+                       <p class="text item-about__text">
+                           We tend to deliver unique and
+                           functional design, through
+                           innovation and creativity.
+                       </p>
+                   </div>
+               </div>
+           </div>
+       </div>
+   </section>
+
+   <section class="portfolio">
+       <div class="container">
+           <h2 class="title title_color_black">portfolio</h2>
+
+           <nav class="portfolio__nav">
+               <ul class="nav-menu">
+                   <li class="nav-menu__item">
+                       <a class="nav-menu__link nav-menu__link_dark nav-menu__link_big" href="#">
+                           all
+                       </a>
+                   </li>
+                   <li class="nav-menu__item">
+                       <a class="nav-menu__link nav-menu__link_dark nav-menu__link_big" href="#">
+                           web
+                       </a>
+                   </li>
+                   <li class="nav-menu__item">
+                       <a class="nav-menu__link nav-menu__link_dark nav-menu__link_big" href="#">
+                           apps
+                       </a>
+                   </li>
+                   <li class="nav-menu__item">
+                       <a class="nav-menu__link nav-menu__link_dark nav-menu__link_big" href="#">
+                           other
+                       </a>
+                   </li>
+               </ul>
+           </nav>
+
+           <div class="portfolio__cards">
+               <div class="photo-card">
+                   <img src="assets/img/card-1.jpg" alt="">
+               </div>
+               <div class="photo-card">
+                   <img src="assets/img/card-2.jpg" alt="">
+               </div>
+               <div class="photo-card">
+                   <img src="assets/img/card-3.jpg" alt="">
+               </div>
+               <div class="photo-card">
+                   <img src="assets/img/card-4.jpg" alt="">
+               </div>
+               <div class="photo-card">
+                   <img src="assets/img/card-5.jpg" alt="">
+               </div>
+               <div class="photo-card">
+                   <img src="assets/img/card-6.jpg" alt="">
+               </div>
+           </div>
+       </div>
+   </section>
 
 
 
