--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>proj</title>
     <link rel="stylesheet" href="build/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 </head>
 
 <body>
@@ -153,25 +154,36 @@
 
            <div class="portfolio__cards">
                <div class="photo-card">
-                   <img src="assets/img/card-1.jpg" alt="">
+                   <a data-fancybox="gallery" href="assets/img/card-1-big.jpg"><img class="img-fluid" src="assets/img/card-1.jpg"></a>
                </div>
                <div class="photo-card">
-                   <img src="assets/img/card-2.jpg" alt="">
+                   <a data-fancybox="gallery" href="assets/img/card-2-big.jpg"><img class="img-fluid" src="assets/img/card-2.jpg"></a>
                </div>
                <div class="photo-card">
-                   <img src="assets/img/card-3.jpg" alt="">
+                   <a data-fancybox="gallery" href="assets/img/card-3-big.jpg"><img class="img-fluid" src="assets/img/card-3.jpg"></a>
                </div>
                <div class="photo-card">
-                   <img src="assets/img/card-4.jpg" alt="">
+                   <a data-fancybox="gallery" href="assets/img/card-4-big.jpg"><img class="img-fluid" src="assets/img/card-4.jpg"></a>
                </div>
                <div class="photo-card">
-                   <img src="assets/img/card-5.jpg" alt="">
+                   <a data-fancybox="gallery" href="assets/img/card-5-big.jpg"><img class="img-fluid" src="assets/img/card-5.jpg"></a>
                </div>
                <div class="photo-card">
-                   <img src="assets/img/card-6.jpg" alt="">
+                   <a data-fancybox="gallery" href="assets/img/card-6-big.jpg"><img class="img-fluid" src="assets/img/card-6.jpg"></a>
                </div>
            </div>
+
+           <div class="button-wrap">
+               <button class="read-more read-more_btn_black">
+                   read more
+               </button>
+           </div>
+
        </div>
+   </section>
+
+   <section class="partners">
+
    </section>
 
 
@@ -197,10 +209,10 @@
 
 
 
-   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 </body>
 
 </html>
