--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="build/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -31,7 +33,7 @@
                    </span>
                </div>
 
-               <div class="button-wrap">
+               <div class="button-wrap button-wrap_after">
                    <button class="read-more read-more_btn_white">
                        read more
                    </button>
@@ -183,18 +185,102 @@
    </section>
 
    <section class="partners">
+       <div class="partners__banner">
+           <div class="container">
+               <h3 class="partners__title">Our partners</h3>
 
+               <div class="partners__logo-wrap">
+                   <div class="partners__logo">
+                       <a href=""><img src="assets/img/partners-1.png" alt="partners-1"></a>
+                   </div>
+                   <div class="partners__logo">
+                       <a href=""><img src="assets/img/partners-2.png" alt="partners-2"></a>
+                   </div>
+                   <div class="partners__logo">
+                       <a href=""><img src="assets/img/partners-3.png" alt="partners-3"></a>
+                   </div>
+                   <div class="partners__logo">
+                       <a href=""><img src="assets/img/partners-4.png" alt="partners-4"></a>
+                   </div>
+               </div>
+           </div>
+       </div>
    </section>
 
+   <section class="contacts">
+       <div class="container">
+            <h2 class="title title_color_black">contact</h2>
 
+           <div class="contacts__wrap">
+               <div class="contacts__form">
+                   <div>
+                       <input class="contacts__input contacts_border_btm" type="text" placeholder="your name">
+                   </div>
+                    <div>
+                        <input class="contacts__input contacts_border_btm" type="email" placeholder="your e-mail">
+                    </div>
+                   <div class="contacts__textarea">
+                       <textarea class="contacts__message contacts_border_btm" name="" id="" cols="55" rows="8" placeholder="message"></textarea>
+                   </div>
+               </div>
 
+               <div class="contacts__info">
+                    <p class="text text_left">
+                        Have an idea for a project?  <br> Just looking
+                        to explore and see the possibilities? I'm
+                        here to help.
+                    </p>
+                   <p class="contacts__text_bold">Postma Elena</p>
+                       <a  href="#"><i class="fab fa-facebook-f"></i></a>
+                       <a  href="#"><i class="fab fa-instagram"></i></a>
+                   <p class="contacts__e-mail_m"><span class="text">e-mail:</span> <span class="contacts__text_bold">postma.elena@gmail.com</span></p>
+               </div>
 
+               <div class="contacts__button">
+                   <button class="read-more read-more_btn_black" type="submit">send</button>
+               </div>
 
+           </div>
+       </div>
+   </section>
 
+   <footer class="footer">
+       <div class="container">
+           <div class="footer__logo">
+               <a href="#">
+                   <img src="assets/img/footer-logo.png" alt="footer-logo">
+               </a>
+           </div>
 
+           <nav class="footer__nav">
+               <ul class="nav-menu">
+                   <li class="nav-menu__item">
+                       <a class="nav-menu__link nav-menu__link_light nav-menu__link_sm" href="#">
+                           Home
+                       </a>
+                   </li>
+                   <li class="nav-menu__item">
+                       <a class="nav-menu__link nav-menu__link_light nav-menu__link_sm" href="#">
+                           Facebook
+                       </a>
+                   </li>
+                   <li class="nav-menu__item">
+                       <a class="nav-menu__link nav-menu__link_light nav-menu__link_sm" href="#">
+                           Linkedin
+                       </a>
+                   </li>
+                   <li class="nav-menu__item">
+                       <a class="nav-menu__link nav-menu__link_light nav-menu__link_sm" href="#">
+                           Contact
+                       </a>
+                   </li>
+               </ul>
+           </nav>
 
+           <p class="footer__copyright">© 2019. All Rights Reserved </p>
 
-
+       </div>
+   </footer>
 
 
 
