--- a/index.html
+++ b/index.html
@@ -233,7 +233,10 @@
                    <p class="contacts__text_bold">Postma Elena</p>
                        <a  href="#"><i class="fab fa-facebook-f"></i></a>
                        <a  href="#"><i class="fab fa-instagram"></i></a>
-                   <p class="contacts__e-mail_m"><span class="text">e-mail:</span> <span class="contacts__text_bold">postma.elena@gmail.com</span></p>
+                   <p class="contacts__e-mail_m">
+                       <span class="text">e-mail:</span>
+                       <a href='mailto:postma.elena@gmail.com' class="contacts__text_bold ">postma.elena@gmail.com</a>
+                   </p>
                </div>
 
                <div class="contacts__button">
